fix: reduce squash size

--- a/src/app/components/Overview/Squash/Squash.scss
+++ b/src/app/components/Overview/Squash/Squash.scss
@@ -36,7 +36,7 @@
     }
 
     @media (min-width: 760px) {
-      width: auto;
+      width: 90%;
       transform: rotate(0deg);
     }
 
